--- a/Front-End Web UI Frameworks and Tools Bootstrap 4/git-test/index.html
+++ b/Front-End Web UI Frameworks and Tools Bootstrap 4/git-test/index.html
@@ -9,8 +9,9 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1> This is a Header</h1>
+    <h1> This is a Header </h1>
     <p>This is a paragraph</p>
     <p>This is a second paragraph</p>
+    <p>This is a third paragraph</p>
 </body>
 </html>
