--- a/Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/index.html
+++ b/Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/index.html
@@ -42,7 +42,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="/img/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -92,8 +93,72 @@
                 </div>
             </div>
         </div>
+        <div class="row row-content justify-content-center">
+            <div class="col-12 col-sm-8">
+                    <div class="card">
+                        <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                        <div class="card-body">
+                        <form>
+                            <div class="form-group row col-12">
+                                <label for="numberofguests" class="col-md-2 col-form-label">Number of Guests</label>
+                                <div class="col-md-1 form-check">
+                                    <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                    <label class="form-check-label" for="numberofguests">
+                                        1
+                                    </label>
+                                </div>
+                                <div class=" col-md-1 form-check">
+                                    <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                    <label class="form-check-label" for="numberofguests">
+                                        2
+                                    </label>
+                                </div>
+                                <div class=" col-md-1 form-check">
+                                    <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                    <label class="form-check-label" for="numberofguests">
+                                        3
+                                    </label>
+                                </div>  
+                                <div class=" col-md-1 form-check">
+                                    <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                    <label class="form-check-label" for="numberofguests">
+                                        4
+                                    </label>
+                                </div>
+                                <div class=" col-md-1 form-check">
+                                    <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                    <label class="form-check-label" for="numberofguests">
+                                        5
+                                    </label>
+                                </div>
+                                <div class=" col-md-1 form-check">
+                                    <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                    <label class="form-check-label" for="numberofguests">
+                                        6
+                                    </label>
+                                </div> 
+                            </div>
+                                <div class="form-group row col-12">
+                                    <label for="dateandtime" class="col-md-2 no-gutters col-form-label">Date and Time</label>
+                                        <div class="col-md-4" style="padding-left:0">
+                                            <input type="text" class="form-control" id="date" name="date" placeholder="Date">                        
+                                        </div> 
+                                        <div class="col-md-4">
+                                            <input type="text" class="form-control" id="time" name="time" placeholder="Time">                        
+                                        </div> 
+                                </div>  
+                                <div class="form-group row col-12">
+                                    <div class="offset-md-2 col-md-10"style="padding-left:0">
+                                        <button type="submit" class="btn btn-primary">Reserve</button>
+                                    </div>
+                                </div>                                   
+                            </form>
+                        </div>
+                    </div>
+                </div>
+        </div>
     </div>
-
+    
     <footer class="footer">
         <div class="container">
             <div class="row">             
