--- a/Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/index.html
+++ b/Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/index.html
@@ -42,8 +42,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="/img/logo.png" class="img-fluid">
+                <div class="col-md-3 col-sm-6 align-self-center">
+                     <img src="/img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-sm-12 align-self-center">
+                    <button type="button" class="btn btn-warning btn-sm btn-block">Reserve Table</button>
                 </div>
             </div>
         </div>
@@ -106,8 +109,8 @@
                         <div class="card-body">
                         <form>
                             <div class="form-group row col-12">
-                                <label for="numberofguests" class="col-md-2 col-form-label">Number of Guests</label>
-                                <div class="col-md-1 form-check">
+                                <label for="numberofguests" class="col-md-2  col-form-label">Number of Guests</label>
+                                <div class="col-md-1  form-check">
                                     <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
                                     <label class="form-check-label" for="numberofguests">
                                         1
@@ -149,7 +152,7 @@
                                         <div class="col-md-4" style="padding-left:0">
                                             <input type="text" class="form-control" id="date" name="date" placeholder="Date">                        
                                         </div> 
-                                        <div class="col-md-4">
+                                        <div class="col-md-4" style="padding-left:0">
                                             <input type="text" class="form-control" id="time" name="time" placeholder="Time">                        
                                         </div> 
                                 </div>  
