--- a/Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/index.html
+++ b/Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/index.html
@@ -46,7 +46,7 @@
                      <img src="/img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-md-3 col-sm-12 align-self-center">
-                    <button type="button" class="btn btn-warning btn-sm btn-block">Reserve Table</button>
+                    <a href="#ReserveTable" class="btn btn-warning btn-sm btn-block" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
         <div class="row row-content justify-content-center">
             <div class="col-12 col-sm-8">
                     <div class="card">
-                        <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                        <h3 class="card-header bg-warning text-white" id="ReserveTable">Reserve a Table</h3>
                         <div class="card-body">
                         <form>
                             <div class="form-group row col-12">
