--- a/Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/index.html
+++ b/Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/index.html
@@ -42,10 +42,10 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-md-3 col-sm-6 align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                      <img src="/img/logo.png" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-sm-12 align-self-center">
+                <div class="col-12 col-sm-3  align-self-center">
                     <a href="#ReserveTable" class="btn btn-warning btn-sm btn-block" role="button">Reserve Table</a>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                         <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span> </h2>
                         <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                     </div>
-                    <img class=" d-flex ml-3 img-thumbnail align-self-center"
+                    <img class=" d-flex ml-3  img img-thumbnail align-self-center"
                         src="/img/buffet.png" alt="buffet">
                 </div>
             </div>
@@ -102,71 +102,73 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content justify-content-center">
+        <div class="row row-content justify-content-center" id="ReserveTable">
             <div class="col-12 col-sm-8">
                     <div class="card">
-                        <h3 class="card-header bg-warning text-white" id="ReserveTable">Reserve a Table</h3>
+                        <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
                         <div class="card-body">
-                        <form>
-                            <div class="form-group row col-12">
-                                <label for="numberofguests" class="col-md-2  col-form-label">Number of Guests</label>
-                                <div class="col-md-1  form-check">
-                                    <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
-                                    <label class="form-check-label" for="numberofguests">
-                                        1
-                                    </label>
-                                </div>
-                                <div class=" col-md-1 form-check">
-                                    <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
-                                    <label class="form-check-label" for="numberofguests">
-                                        2
-                                    </label>
-                                </div>
-                                <div class=" col-md-1 form-check">
-                                    <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
-                                    <label class="form-check-label" for="numberofguests">
-                                        3
-                                    </label>
-                                </div>  
-                                <div class=" col-md-1 form-check">
-                                    <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
-                                    <label class="form-check-label" for="numberofguests">
-                                        4
-                                    </label>
-                                </div>
-                                <div class=" col-md-1 form-check">
-                                    <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
-                                    <label class="form-check-label" for="numberofguests">
-                                        5
-                                    </label>
-                                </div>
-                                <div class=" col-md-1 form-check">
-                                    <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
-                                    <label class="form-check-label" for="numberofguests">
-                                        6
-                                    </label>
-                                </div> 
-                            </div>
+                            <form>
                                 <div class="form-group row col-12">
-                                    <label for="dateandtime" class="col-md-2 no-gutters col-form-label">Date and Time</label>
-                                        <div class="col-md-4" style="padding-left:0">
-                                            <input type="text" class="form-control" id="date" name="date" placeholder="Date">                        
+                                    <label for="numberofguests" class="col-md-2  col-form-label">Number of Guests</label>
+                                    <div class="col-md-8">
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                            <label class="form-check-label" for="numberofguests">
+                                                1
+                                            </label>
+                                        </div>
+                                        <div class=" form-check form-check-inline">
+                                            <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                            <label class="form-check-label" for="numberofguests">
+                                                2
+                                            </label>
+                                        </div>
+                                        <div class="  form-check form-check-inline">
+                                            <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                            <label class="form-check-label" for="numberofguests">
+                                                3
+                                            </label>
+                                        </div>  
+                                        <div class=" form-check form-check-inline">
+                                            <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                            <label class="form-check-label" for="numberofguests">
+                                                4
+                                            </label>
+                                        </div>
+                                        <div class=" form-check form-check-inline">
+                                            <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                            <label class="form-check-label" for="numberofguests">
+                                                5
+                                            </label>
+                                        </div>
+                                        <div class=" form-check form-check-inline">
+                                            <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                            <label class="form-check-label" for="numberofguests">
+                                                6
+                                            </label>
                                         </div> 
-                                        <div class="col-md-4" style="padding-left:0">
-                                            <input type="text" class="form-control" id="time" name="time" placeholder="Time">                        
-                                        </div> 
+                                    </div>                                    
+                                </div>
+                                <div class="form-group row col-12">
+                                    <label for="dateandtime" class="col-md-2 col-form-label">Date and Time</label>
+                                    <div class="col-md-4">
+                                        <input type="text" class="form-control" id="date" name="date" placeholder="Date">                        
+                                    </div> 
+                                    <div class="col-md-4">
+                                        <input type="text" class="form-control" id="time" name="time" placeholder="Time">                        
+                                    </div> 
                                 </div>  
                                 <div class="form-group row col-12">
-                                    <div class="offset-md-2 col-md-10"style="padding-left:0">
+                                    <div class="offset-md-2 col-md-10">
                                         <button type="submit" class="btn btn-primary">Reserve</button>
                                     </div>
                                 </div>                                   
                             </form>
                         </div>
                     </div>
-                </div>
-        </div>
-    </div>
+              </div>
+         </div>
+     </div>
     
     <footer class="footer">
         <div class="container">
