--- a/Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/index.html
+++ b/Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/index.html
@@ -77,6 +77,97 @@
         </div>
     </div>
 
+     <!--Assignment 3 Modal for Reservation Table Form -->
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group row col-12">
+                        <label for="numberofguests" class="col-md-2  col-form-label">Number of Guests</label>
+                        <div class="col-md-8">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                <label class="form-check-label" for="numberofguests">
+                                        1
+                                </label>
+                            </div>
+                            <div class=" form-check form-check-inline">
+                                <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                <label class="form-check-label" for="numberofguests">
+                                    2
+                                </label>
+                            </div>
+                            <div class="  form-check form-check-inline">
+                                <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                <label class="form-check-label" for="numberofguests">
+                                    3
+                                </label>
+                            </div>  
+                            <div class=" form-check form-check-inline">
+                                <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                <label class="form-check-label" for="numberofguests">
+                                    4
+                                </label>
+                            </div>
+                            <div class=" form-check form-check-inline">
+                                <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                <label class="form-check-label" for="numberofguests">
+                                    5
+                                </label>
+                            </div>
+                            <div class=" form-check form-check-inline">
+                                <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
+                                <label class="form-check-label" for="numberofguests">
+                                    6
+                                </label>
+                            </div> 
+                        </div>                                    
+                    </div>
+                    <!--Assignment 3 Radio Button Group -->
+                    <div class="form-group row col-12">
+                        <label for="section" class="col-md-2 col-form-label">Section</label>
+                            <div class="col md-8">
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                            <input type="radio"  name="options" id="non-smoking" autocmplete="off" checked> Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger">
+                                            <input type="radio"  name="options" id="smoking"autocmplete="off" checked> Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div> 
+
+                    <div class="form-group row col-12">
+                        <label for="dateandtime" class="col-md-2 col-form-label">Date and Time</label>
+                        <div class="col-md-4">
+                            <input type="text" class="form-control" id="date" name="date" placeholder="Date">                        
+                        </div> 
+                        <div class="col-md-4">
+                            <input type="text" class="form-control" id="time" name="time" placeholder="Time">                        
+                        </div> 
+                    </div>  
+                    <div class="form-group row col-12">
+                        <div class="offset-md-2 col-md-6">
+                            <!--Assignment 3 Button Cancel -->
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                    </div>                                   
+                </form>
+            </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -88,8 +179,9 @@
                      <img src="/img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3  align-self-center">
+                    <!--Assignment 3 Update Reserve Button -->
                     <a role="button" class="btn btn-warning btn-sm btn-block"
-                    data-toggle="modal" data-target="#reserveModal" data-placement="bottom" href="#reserveform">Reserve Table
+                        data-toggle="modal" data-target="#reserveModal">Reserve Table
                     </a>
                 </div>
             </div>
@@ -143,6 +235,14 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                          <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -196,95 +296,6 @@
                 </div>
             </div>
         </div>
-
-        <div id="reserveModal" class="modal fade" role="dialog">
-                <div class="modal-dialog modal-lg" role="content">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title">Reserve a Table</h4>
-                            <button type="button" class="close" data-dismiss="modal">
-                                &times;
-                            </button>
-                        </div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="form-group row col-12">
-                                <label for="numberofguests" class="col-md-2  col-form-label">Number of Guests</label>
-                                <div class="col-md-8">
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
-                                        <label class="form-check-label" for="numberofguests">
-                                             1
-                                        </label>
-                                    </div>
-                                    <div class=" form-check form-check-inline">
-                                        <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
-                                        <label class="form-check-label" for="numberofguests">
-                                            2
-                                        </label>
-                                    </div>
-                                    <div class="  form-check form-check-inline">
-                                        <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
-                                        <label class="form-check-label" for="numberofguests">
-                                            3
-                                        </label>
-                                    </div>  
-                                    <div class=" form-check form-check-inline">
-                                        <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
-                                        <label class="form-check-label" for="numberofguests">
-                                            4
-                                        </label>
-                                    </div>
-                                    <div class=" form-check form-check-inline">
-                                        <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
-                                        <label class="form-check-label" for="numberofguests">
-                                            5
-                                        </label>
-                                    </div>
-                                    <div class=" form-check form-check-inline">
-                                        <input class="form-check-input" type="radio"  id="numberofguests" name="numberofguests">
-                                        <label class="form-check-label" for="numberofguests">
-                                            6
-                                        </label>
-                                    </div> 
-                                </div>                                    
-                            </div>
-
-                            <div class="form-group row col-12">
-                                <label for="section" class="col-md-2 col-form-label">Section</label>
-                                    <div class="col md-8">
-                                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                            <label class="btn btn-success active">
-                                                 <input type="radio"  name="options" id="non-smoking"autocmplete="off" checked> Non-Smoking
-                                            </label>
-                                            <label class="btn btn-danger">
-                                                 <input type="radio"  name="options" id="smoking"autocmplete="off" checked> Smoking
-                                            </label>
-                                        </div>
-                                    </div>
-                             </div> 
-
-
-                            <div class="form-group row col-12">
-                                <label for="dateandtime" class="col-md-2 col-form-label">Date and Time</label>
-                                <div class="col-md-4">
-                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">                        
-                                </div> 
-                                <div class="col-md-4">
-                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">                        
-                                </div> 
-                            </div>  
-                            <div class="form-group row col-12">
-                                <div class="offset-md-2 col-md-6">
-                                    <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn btn-primary btn-sm ml-auto">Reserve</button>
-                                </div>
-                            </div>                                   
-                        </form>
-                    </div>
-                    </div>
-                 </div>
-        </div>
      </div>
     
     <footer class="footer">
@@ -333,10 +344,16 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
-            $(document).ready(function(){
-                $('[data-toggle="tooltip"]').tooltip();
+        $(document).ready(function(){
+            $("#mycarousel").carousel({interval: 2000});
+            $("#carousel-pause").click(function(){
+                $("#mycarousel").carousel('pause');
             });
-     </script>
+            $("#carousel-play").click(function(){
+                $("#mycarousel").carousel('cycle');
+            });
+        })
+    </script>
 </body>
 
 </html>
